--- a/index.html
+++ b/index.html
@@ -434,7 +434,99 @@
 
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section">
+                <h2 class="section__title">
+                    Qualification
+                </h2>
+                <span class="section__subtitle">
+                    My personal journey
+                </span>
 
+                <div class="qualification__container container">
+                    <div class="qualification__tabs">
+                        <div class="qualification__button button--flex qualificiton__active" data-target="#education">
+                            <i class="uil uil-graduation-cap qualification__icon">
+                                Education
+                            </i>
+                        </div>
+
+                        <div class="qualification__button button--flex" data-target="#work">
+                            <i class="uil uil-briefcase-alt qualification__icon">
+                                Work
+                            </i>
+                        </div>
+                    </div>
+
+                    <div class="qualification_sections">
+
+                        <div class="qualification__content qualification__active" data-content id="education">
+                            <div class="qualification__data">
+                                <div>
+                                    <h3 class="qualification__title">
+                                       Masters in Computer Engineering
+                                    </h3>
+                                    <span class="qualification__subtitle">
+                                        NIT, Surat
+                                    </span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt">
+                                            2017-19
+                                        </i>
+                                    </div>
+                                </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
+                            </div>
+                            <div class="qualification__data">
+                                <div></div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <!-- <span class="qualification__line"></span> -->
+                                </div>
+                                <div>
+                                    <h3 class="qualification__title">
+                                    Bachelors in  Computer Science & Engineering
+                                    </h3>
+                                    <span class="qualification__subtitle">
+                                        KEC, Dwarahat
+                                    </span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt">
+                                            2012-16
+                                        </i>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+
+
+                        <!--QC2-->
+
+                        <div class="qualification__content" data-content id="work">
+                            <div class="qualification__data">
+                                <div>
+                                    <h3 class="qualification__title">
+                                       Frontend Developer
+                                    </h3>
+                                    <span class="qualification__subtitle">
+                                        Valuesoft Info Services Pvt Ltd
+                                    </span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt">
+                                            April 2020- May 2021
+                                        </i>
+                                    </div>
+                                </div>
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <!-- <span class="qualification__line"></span> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </section>
 
             <!--==================== SERVICES ====================-->
