--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             </section>
 
             <!--==================== QUALIFICATION ====================-->
-            <section class="qualification section">
+            <section class="qualification section" id="portfolio">
                 <h2 class="section__title">
                     Qualification
                 </h2>
@@ -531,7 +531,176 @@
 
             <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
-                
+                <h2 class="section__title">
+                    Services
+                </h2>
+                <span class="section__subtitle">
+                    What I Offer?
+                </span>
+
+                <div class="services__container container grid">
+                    <div class="services__content">
+                        <div>
+                            <i class="uil uil-web-grid services__icon">
+
+                            </i>
+                            <h3 class="services__title">
+                                UI/UX Developer
+                            </h3>
+                        </div>
+
+                        <span class="button button--flex button--small button--link services__button">
+                            View More
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
+
+                        <div class="services__modal">
+                            <div class="services__modal-content">
+                                <h4 class="services__modal-title">
+                                    UI/UX <br> Designer
+                                </h4>
+                                <i class="uil uil-times services__modal-close">
+
+                                </i>
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I develop the user interface</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>Web page development</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I create the ux element interactions</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I position your company brand</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="services__content">
+                        <div>
+                            <i class="uil uil-arrow services__icon">
+
+                            </i>
+                            <h3 class="services__title">
+                                Frontend <br> Designer
+                            </h3>
+                        </div>
+
+                        <span class="button button--flex button--small button--link services__button">
+                            View More
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
+
+                        <div class="services__modal">
+                            <div class="services__modal-content">
+                                <h4 class="services__modal-title">
+                                    Frontend <br> Developer
+                                </h4>
+                                <i class="uil uil-times services__modal-close">
+
+                                </i>
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I develop the user interface</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>Web page development</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I create the ux element interactions</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I position your company brand</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="services__content">
+                        <div>
+                            <i class="uil uil-pen services__icon">
+
+                            </i>
+                            <h3 class="services__title">
+                                Branding <br> Designer
+                            </h3>
+                        </div>
+
+                        <span class="button button--flex button--small button--link services__button">
+                            View More
+                            <i class="uil uil-pen button__icon"></i>
+                        </span>
+
+                        <div class="services__modal">
+                            <div class="services__modal-content">
+                                <h4 class="services__modal-title">
+                                    Branding <br> Designer
+                                </h4>
+                                <i class="uil uil-times services__modal-close">
+
+                                </i>
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I develop the user interface</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>Web page development</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I create the ux element interactions</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon">
+
+                                        </i>
+                                        <p>I position your company brand</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </section>
 
             <!--==================== PORTFOLIO ====================-->
