added dark light theme css and js

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 </div>
 
                 <div class="nav__btns">
+                    <i class="uil uil-moon change-theme" id="theme-button"></i>
                     <div class="nav__toggle" id="nav-toggle">
                         <i class="uil uil-apps">
 
@@ -1019,7 +1020,7 @@
         <!--==================== SCROLL TOP ====================-->
         <a href="#" class="scrollup" id="scroll-up">
             <i class="uil uil-arrow-up scrollup__icon">
-                
+
             </i>
         </a>
 
